test/error/ast/CaseElemExprTypeMismatch.mod
MODULE CaseElemExprTypeMismatch;
VAR x: INTEGER;
BEGIN
  CASE x OF 1, 'a': END;
END CaseElemExprTypeMismatch.
